[metadata]
name = horizon
version = 0.0.1
url = https://github.com/sttky/horizon
author = Stefan Trotzky
author_email = tky.software@gmail.com
description = An event sequencer
long_description = file: README.md
keywords = sequencer, event handler, timing, automation
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    matplotlib
    pytest
    mock
    sphinx
    sphinx-rtd-theme

[options.packages.find]
exclude =
    sandbox*
    examples*
    tools*
    docs*
    tests*
    horizon.tests*